# miron-ai

./: .gitignore  README.md  chat.py  config.py  dataset.py  download_data.py  maninmiron_llm.py  prepare_data.py  pyproject.toml  refresh.py  requirements.txt  tokenizer.py  train.py
core/: __init__.py  config.py  dataset.py  miron_llm.py  tokenizer.py
data-download/: download_data.py  download_sft_data.py
docs/: python-version.md
saved_model/: config.json
scripts/: chat.py  prepare_data.py  prepare_sft.py  sft.py  train.py
settings/: README.md  settings.json  sft_settings.json
